# NumeroUno-Education-App-

./: INSTALLATION_COMPLETE.md  OCR_SETUP.md  PRINT_FORMAT_QR_CODE_EXAMPLE.html  QR_CODE_PRINT_FORMAT_USAGE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
numerouno/: README_QUIZ_ATTEMPT.md  api.py  hooks.py  modules.txt  patches.txt  test_notifications.py
numerouno/config/: desktop.py
numerouno/numerouno/: asset_document_archive.py  asset_management.py  permissions.py  quiz_utils.py  unified_assessment_system.py
numerouno/numerouno/api/: certificate_verification.py  notification_api.py  numerouno_registration.py  public_portal.py  quiz_api.py  quiz_attempt.py  registration.py  third_party_certificate.py
numerouno/numerouno/custom/: assessment_result.json  course.json  course_schedule.json  customer.json  instructor.json  packed_item.json  payment_entry.json  question.json  quiz_activity.json  quiz_question.json  sales_invoice.json  sales_invoice_item.json  sales_order.json  sales_order_item.json  student.json  student_applicant.json  student_attendance.json  student_group.json  (+1 more)
numerouno/templates/: certificate.html
numerouno/www/: assessment-result.html  assessment-result.py  certificate-verification.html  certificate-verification.py  mark-attendance.html  numerouno-registration.html  numerouno-registration.py  public_portal_forms.html  public_portal_forms.py  public_quiz_3.html  qrcode.py  quiz-attempt.html  quiz-attempt.py  quiz-index.py  quiz-submit.html  quiz-take.html  quiz.html  register.html  register.py  section_quiz.html
(+410 files in other folders)
