[project]
name = "numerouno"
authors = [
    { name = "mohtashim", email = "shoaibmohtashim973@gmail.com"}
]
description = "Customization in Frappe Education Module"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "PyPDF2>=3.0.0",
    "stripe",
    "pytesseract>=0.3.10",
    "Pillow>=9.0.0",
    "opencv-python-headless>=4.5.0",
    "numpy>=1.21.0",
    "requests>=2.25.0",
    "qrcode[pil]>=7.4.2"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
